--- a/TimeTable.html
+++ b/TimeTable.html
@@ -50,9 +50,56 @@
             <td>Science</td>
             <td>Maths</td>
         </tr>
-    
-    <!--</table>
-<h1>Products Table</h1>
+    </table>
+    <h1></h1>
+    <table border="2px" cellpadding="10px" width="50%" align="center">
+        <tr>
+            <th colspan="6">TIME TABLE-2</th>
+        </tr>
+        <tr>
+            <th rowspan="7">Hours</th>
+
+        </tr>
+        <tr> 
+            <th>Mon</th>
+            <th>Tue</th>
+            <th>Wed</th>
+            <th>Thu</th>
+            <th>Fri</th>
+        </tr>
+        <tr>
+            <td>Social</td>
+            <td>Telugu</td>
+            <td>Games</td>
+            <td>Maths</td>
+            <td>Science</td>
+        </tr>
+        <tr>
+            <td>Games</td>
+            <td>Science</td>
+            <td>Social</td>
+            <td>Telugu</td>
+            <td>Arts</td> 
+         
+        </tr>
+        <tr>
+            <th colspan="5">LUNCH</th>
+        </tr>
+        <tr>
+            <td>Arts</td>
+            <td>Maths</td>
+            <td>Telugu</td>
+            <td>Games</td>
+            <td>Project</td>
+        </tr>
+        <tr>
+            <td>Social</td>
+            <td>Arts</td>
+            <td>Games</td>
+            <td>Maths</td>
+            <td>Telugu</td>
+        </tr>
+<!--<h1>Products Table</h1>
     <table border="2px" cellspacing="0" cellpadding="10px" width="100%">
         <tr>
             <th colspan="8">Amazon Products</th>
