--- a/TimeTable.html
+++ b/TimeTable.html
@@ -99,6 +99,55 @@
             <td>Maths</td>
             <td>Telugu</td>
         </tr>
+    </table><br>
+     <table border="2px" cellpadding="10px" width="50%" align="center">
+        <tr>
+            <th colspan="6">TIME TABLE-3</th>
+        </tr>
+        <tr>
+            <th rowspan="7">Hours</th>
+
+        </tr>
+        <tr> 
+            <th>Mon</th>
+            <th>Tue</th>
+            <th>Wed</th>
+            <th>Thu</th>
+            <th>Fri</th>
+        </tr>
+        <tr>
+            <td>Project</td>
+            <td>Arts</td>
+            <td>Maths</td>
+            <td>Social</td>
+            <td>Telugu</td>
+        </tr>
+        <tr>
+            <td>Games</td>
+            <td>Science</td>
+            <td>Project</td>
+            <td>Maths</td>
+            <td>Project</td> 
+         
+        </tr>
+        <tr>
+            <th colspan="5">LUNCH</th>
+        </tr>
+        <tr>
+            <td>Games</td>
+            <td>Telugu</td>
+            <td>Arts</td>
+            <td>Games</td>
+            <td>Project</td>
+        </tr>
+        <tr>
+            <td>Social</td>
+            <td>Arts</td>
+            <td>Games</td>
+            <td>Science</td>
+            <td>Games</td>
+        </tr>
+    </table>
 <!--<h1>Products Table</h1>
     <table border="2px" cellspacing="0" cellpadding="10px" width="100%">
         <tr>
